Closed Bug 334892 Opened 18 years ago Closed 18 years ago

toplevel-window-ready notification doesn't exist in firefox 1.5

Categories

(Toolkit Graveyard :: Data Collection/Metrics, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: bryner, Assigned: bryner)

Details

Attachments

(1 file)

We currently use this notification for logging window open.
Attached patch patchSplinter Review
Use domwindowopened, but with a timer so that we can grab the opener after it's been set.  Since I wasn't 100% sure that we couldn't have more than one pending window open, I have an array of active timers.
Attachment #219235 - Flags: first-review?(darin)
Comment on attachment 219235 [details] [diff] [review]
patch

r=darin
Attachment #219235 - Flags: first-review?(darin)
Attachment #219235 - Flags: first-review+
Attachment #219235 - Flags: approval-branch-1.8.1+
checked in
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Flags: first-review+
Flags: approval-branch-1.8.1+
Product: Toolkit → Toolkit Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: