Work around lack of toplevel-window-ready in Firefox 1.5 by using a timer callback when we see a domwindowopened notification (bug 334892) r=darin